# ant

./: CMakeLists.txt  README  TODO
docs/: Makefile  bibliography.bib  index.tex  title.tex
docs/img/: alberoregolasemplice.dia  alberounificazione.dia  bfs.dia  dfs.dia  schemagenerale.dia
docs/tex/: algoritmi.tex  appendice.tex  conclusioni.tex  funzionamento.tex  introduzione.tex  quotations.tex
examples/: agricoltore.ant  eightpuzzle.clp  vacuum.ant
examples/clips/: agricoltore.clp  giocoOtto.clp
src/: .gitignore  CMakeLists.txt  compiler.h  debug.h  expression.cpp  expression.h  facts.cpp  facts.h  functions.cpp  functions.h  global.h  heuristic.cpp  heuristic.h  main.cpp  predicate.cpp  predicate.h  predicate_impl.cpp  predicate_impl.h  rules.cpp  rules.h  show.cpp  values.h  variables.cpp  variables.h  version.h  wm.cpp  wm.h
src/algorithms/: astar.cpp  astar.h  bfs.h  common.cpp  common.h  dfs.cpp  dfs.h  hill.cpp  hill.h
src/ds/: array.cpp  array.h  hashmap.h  heap.h  trie.h
src/parser/: cmdline.h  language.h  parser.cpp  parser.h  setblock.cpp  setblock.h  tokenizer.cpp  tokenizer.h
